<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Function Test</string>
    <string name="function_test_title">功能測試</string>
    <string name="welcome_message">歡迎使用功能測試系統</string>
    <string name="test_button">執行測試</string>
    <string name="drawer_hint">點擊左上角選單可查看更多功能</string>
    <string name="drawer_subtitle">硬體功能測試</string>
    <string name="permission_required">權限需求</string>
    <string name="permission_message">應用程式需要相關權限才能正常運作</string>
    <string name="exit_app">離開</string>
    <string name="splash_subtitle">硬體功能測試系統</string>
    <string name="splash_version">Version 1.0</string>
</resources>
